after add tajawal font-family header menu wrapping issue fix for tablet and responsive view

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -258,7 +258,7 @@
         margin-bottom: 32px;
 
         .section-title {
-          font-size: 48px;
+          font-size: 42px;
         }
 
         .section-description {
